--- a/templates/Front/default/index.html.twig
+++ b/templates/Front/default/index.html.twig
@@ -4,5 +4,10 @@
 {% block body %}
     <div class="container m-5">
         <h2>{{ home }}</h2>
+        <a class="nav-link" href="{{ path('login') }}">
+            <button class="btn btn-primary">Login
+            </button>
+        </a>
+
     </div>
 {% endblock %}
