--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,17 +21,11 @@
 
         {% block javascripts %}
             <script src="{{ asset('bundles/fosjsrouting/js/router.min.js') }}"></script>
-{#            <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>#}
-            <script src="{{ asset('js/bootstrap.bundle.min.js') }}"></script>
+            <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
             <script src="{{ asset('js/owl.carousel.min.js') }}"></script>
             <script src="{{ asset('js/jquery-3.6.0.min.js') }}"></script>
-
             <script src="{{ asset('js/main.js') }}"></script>
             <script src="{{ asset('js/jquery.js') }}"></script>
-            <script src="{{ asset('js/slider.js') }}"></script>
-
-
-
 
         {% endblock %}
     </head>
