--- a/public/css/main.css
+++ b/public/css/main.css
@@ -92,7 +92,7 @@
     padding-top: 100px;
 }
 
-.login-user-front {
+.login-user-front,#home-thecircle {
     padding-top: 100px;
     width: 90%;
 }
