--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,35 +1,73 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="Javier Ortí">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}
-            <!-- Bootstrap core CSS -->
-            <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet">
-            <link href="{{ asset('css/main.css') }}" rel="stylesheet">
-            <link href="{{ asset('css/responsive.css') }}" rel="stylesheet">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Javier Ortí">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    {% block stylesheets %}
+        <!-- Bootstrap core CSS -->
+        <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet">
+        <link href="{{ asset('css/main.css') }}" rel="stylesheet">
+        <link href="{{ asset('css/responsive.css') }}" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
+        <!-- in the <head> section -->
+        <link rel="stylesheet" type="text/css"
+              href="https://cdn.datatables.net/v/dt/jq-3.2.1/dt-1.10.16/datatables.min.css"/>
 
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
-            <!-- in the <head> section -->
-            <link rel="stylesheet" type="text/css"
-                  href="https://cdn.datatables.net/v/dt/jq-3.2.1/dt-1.10.16/datatables.min.css"/>
+    {% endblock %}
+    {% block javascripts %}
+        <script src="{{ asset('bundles/fosjsrouting/js/router.min.js') }}"></script>
+        <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
+        <script src="{{ asset('js/jquery-3.6.0.min.js') }}"></script>
+        <script src="{{ asset('js/main.js') }}"></script>
+        <script src="{{ asset('js/jquery.js') }}"></script>
 
-        {% endblock %}
-
-        {% block javascripts %}
-            <script src="{{ asset('bundles/fosjsrouting/js/router.min.js') }}"></script>
-            <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
-            <script src="{{ asset('js/owl.carousel.min.js') }}"></script>
-            <script src="{{ asset('js/jquery-3.6.0.min.js') }}"></script>
-            <script src="{{ asset('js/main.js') }}"></script>
-            <script src="{{ asset('js/jquery.js') }}"></script>
-
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+    {% endblock %}
+</head>
+<body>
+{% block body %}
+    {% block nav %}
+        <div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <a href="#" class="navbar-brand">
+                        <img src="{{ asset('images/logo.png') }}" height="28" alt="CoolBrand">
+                    </a>
+                    <button type="button" class="navbar-toggler" data-bs-toggle="collapse"
+                            data-bs-target="#navbarCollapse">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarCollapse">
+                        <div class="navbar-nav">
+                            <a href="{{ path('home') }}" class="nav-item nav-link active">Home</a>
+                            <a href="#" class="nav-item nav-link">Profile</a>
+                            <a href="#" class="nav-item nav-link">Messages</a>
+                            <a href="#" class="nav-item nav-link disabled" tabindex="-1">Reports</a>
+                        </div>
+                        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                            <div class="navbar-nav ms-auto">
+                                <a href="/logout" title="Salir" style="color: red">
+                                    <button
+                                            class="btn btn-outline-danger " style="border: 0">
+                                        <i class="bi bi-box-arrow-left" style="font-size: 0.7em;"></i> Logout
+                                    </button>
+                                </a>
+                            </div>
+                            <div class="navbar-nav ms-auto">
+                                <a style="color: #1d2124;font-weight: bold" href="#" class="nav-item nav-link">{{ app.user.username }}</a>
+                            </div>
+                        {% else %}
+                            <div class="navbar-nav ms-auto">
+                                <a  href="{{ path('login') }}" class="nav-item nav-link">Login</a>
+                            </div>
+                        {% endif %}
+                    </div>
+                </div>
+            </nav>
+        </div>
+    {% endblock %}
+{% endblock %}
+</body>
 </html>
