--- a/templates/Front/user/new.html.twig
+++ b/templates/Front/user/new.html.twig
@@ -5,11 +5,11 @@
     {% block nav %}
         {{ parent() }}
     {% endblock %}
-<section id="home-thecircle">
-    <div class="container">
+<section id="new-user" >
+    <div class="container" >
         {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
             {{ form_start(formUser,{ 'attr': {'enctype': 'multipart/form-data' } }) }}
-            <div class="row">
+            <div class="row" >
                 <div class="form-group col-md-4">
                     <label>usuario:</label>
                     {{ form_widget(formUser.username,{ 'attr': {'class': 'form-control','placeholder':'usuario' } }) }}
@@ -37,7 +37,7 @@
                     {{ form_errors(formUser.type) }}
                 </div>
                 <div id="info-user"></div>
-                <div class="form-group col-md-1">
+                <div class="form-group col-md-1 mt-2">
                     <button class="btn btn-dark" type="submit" id="btn-save-user" disabled>Guardar</button>
                 </div>
             </div>
