--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,17 +12,18 @@
         <link href="{{ asset('css/main.css') }}" rel="stylesheet">
         <link href="{{ asset('css/responsive.css') }}" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
+        <link href="{{ asset('css/datatables.min.css') }}" rel="stylesheet">
         <!-- in the <head> section -->
-        <link rel="stylesheet" type="text/css"
-              href="https://cdn.datatables.net/v/dt/jq-3.2.1/dt-1.10.16/datatables.min.css"/>
     {% endblock %}
     {% block javascripts %}
+
         <script src="{{ asset('js/bootstrap.js') }}"></script>
         <script src="{{ asset('bundles/fosjsrouting/js/router.min.js') }}"></script>
         <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
         <script src="{{ asset('js/jquery-3.6.0.min.js') }}"></script>
         <script src="{{ asset('js/main.js') }}"></script>
         <script src="{{ asset('js/jquery.js') }}"></script>
+        <script src="{{ asset('js/datatables.min.js') }}"></script>
 
     {% endblock %}
 </head>
@@ -46,7 +47,7 @@
                             <a href="#" class="nav-item nav-link">Messages</a>
                         </div>
                         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                            <div class="navbar-nav ms-auto">
+                            <div class="nav-item nav-link">
                                 <a href="/logout" title="Salir" style="color: red">
                                     <button
                                             class="btn btn-outline-danger " style="border: 0">
@@ -55,19 +56,23 @@
                                 </a>
                             </div>
                             {% if is_granted('ROLE_ADMIN') %}
-                                <div class="navbar-nav ms-auto">
-                                    <a href="{{ path('newuser') }}" class="nav-item nav-link">New User</a>
+                                <div class="nav-item nav-link">
+                                    <a href="{{ path('newuser') }}" class="nav-item nav-link"><b>Usuarios</b></a>
                                 </div>
                             {% endif %}
-                            <div style="color: #1d2124;" class="navbar-nav ml-5" >
-                                 Tipo: <b>{{ app.user.type }}</b>
+                            <div  class="nav-item nav-link">
+                              <scan  class="nav-item nav-link">Tipo: <b>{{ app.user.type }}</b></scan>
                             </div>
-                            <div class="navbar-nav ms-auto ml-2">
-                                <a style="color: #1d2124;" href="{{ path('show.user', { 'id': app.user.id }) }}"
+                            <div class="nav-item nav-link">
+                                <a  href="{{ path('show.user', { 'id': app.user.id }) }}"
                                    class="nav-item nav-link">Usuario: <b>{{ app.user.username }}</b></a>
                             </div>
+                            <div class="nav-item nav-link">
+                                <a href="{{ path('service') }}"
+                                   class="nav-item nav-link"><b>Servicios</b></a>
+                            </div>
                         {% else %}
-                            <div class="navbar-nav ms-auto">
+                            <div class="nav-item nav-link">
                                 <a href="{{ path('login') }}" class="nav-item nav-link">Login</a>
                             </div>
                         {% endif %}
