--- a/templates/Admin/service/index.html.twig
+++ b/templates/Admin/service/index.html.twig
@@ -12,6 +12,7 @@
                 <a style="color: #1d2124;float: right" href="{{ path('newservice') }}"
                    class="nav-item nav-link"><b><i class="bi bi-bag-plus-fill"></i></b></a>
        </h1>
+                <p id="info-admin"></p>
                 <div style="width: 95%" id="admin-service">Loading...</div>
                 <script src="{{ asset('bundles/datatables/js/datatables.js') }}"></script>
                 <script>
@@ -27,7 +28,27 @@
                                 ]
                             }).then(function (dt) {
                             // dt contains the initialized instance of DataTables
+
                             dt.on('draw', function () {
+                                $('.deleteService').click(function (e) {
+                                    var id = $('.deleteService').attr('id');
+                                    console.log(id)
+                                    e.preventDefault()
+                                    $.ajax({
+                                        type: 'POST',
+                                        data: {id: id},
+                                        url: Routing.generate('ajax.admin.service.delete'),
+                                        async: true,
+                                        success: function (data, status, object) {
+                                            var id = '#' + data;
+                                            $(id).remove();
+                                            $('#info-admin').html('<span style="color: green">Se ha eliminado el Servicio.</span>')
+                                        },
+                                        error: function (data, status, object) {
+                                        }
+                                    });
+                                });
+
                             })
                         });
                     });
