--- a/templates/Admin/service/edit.html.twig
+++ b/templates/Admin/service/edit.html.twig
@@ -10,6 +10,9 @@
             {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                 {{ form_start(formService,{ 'attr': {'enctype': 'multipart/form-data' } ,'name':'editService'}) }}
                 <div class="row">
+                    <div class="form-group col-md-1 mt-2 text-center">
+                        <a href="{{ path('service') }}" style="font-size: 2.4em;"><i class="bi bi-arrow-left-circle-fill"></i></a>
+                    </div>
                     <div class="form-group col-md-4">
                         <input type="hidden" value="{{ service.id }}" name="id">
                         <label>Nombre servicio:</label>
