--- a/templates/Admin/service/new.html.twig
+++ b/templates/Admin/service/new.html.twig
@@ -10,12 +10,20 @@
             {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                 {{ form_start(formService,{ 'attr': {'enctype': 'multipart/form-data' } }) }}
                 <div class="row">
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-12">
                         <label>Nuevo servicio:</label>
                         {{ form_widget(formService.name,{ 'attr': {'class': 'form-control','placeholder':'Nombre servicio' } }) }}
                         {{ form_errors(formService.name) }}
                     </div>
-                    <div class="form-group col-md-4 mt-4">
+                </div>
+                <br>
+                <div class="row">
+                    <div class="form-group col-md-11">
+                        <label>Comentario:</label>
+                        {{ form_widget(formService.description,{ 'attr': {'class': 'form-control','placeholder':'Descripción sobre el servicio..','rows': 5 } }) }}
+                        {{ form_errors(formService.description) }}
+                    </div>
+                    <div class="form-group col-md-1 mt-4">
                         <button class="btn btn-dark" type="submit" id="btn-save-service" disabled>Guardar</button>
                     </div>
                 </div>
