--- a/templates/Admin/user/show.html.twig
+++ b/templates/Admin/user/show.html.twig
@@ -7,11 +7,14 @@
     <div class="container" id="front-show-user">
         <h3>Información del usuario</h3>
         <div class="row">
-            <div class="col-6">
+            <div class="col-3">
                 <b>Usuario: </b>{{ app.user.username }}
             </div>
-            <div class="col-6">
+            <div class="col-3">
                <b>Email: </b> {{ app.user.email }}
+            </div>
+            <div class="col-3">
+                <b>Tipo de usuario: </b> {{ app.user.type }}
             </div>
         </div>
     </div>
