fix:update base.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -74,7 +74,8 @@
 
                         {% else %}
                             <div class="nav-item nav-link">
-                                <a href="{{ path('login') }}" class="nav-item nav-link">Login</a>
+                                <a href="{{ path('login') }}" class="nav-item nav-link">
+                                    <button class="btn btn-warning"><i class="bi bi-door-open"></i> Login</button></a>
                             </div>
                         {% endif %}
                     </div>
