--- a/public/css/main.css
+++ b/public/css/main.css
@@ -92,7 +92,7 @@
     padding-top: 100px;
 }
 
-.login-user-front, #new-user,#front-show-user,#new-service{
+.login-user-front, #new-user,#front-show-user,#new-service,.image-home-admin{
     padding-top: 100px;
     width: 90%;
     margin: auto;
