--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,7 +57,7 @@
                             </div>
                             {% if is_granted('ROLE_ADMIN') %}
                                 <div class="nav-item nav-link">
-                                    <a href="{{ path('newuser') }}" class="nav-item nav-link"><b>Usuarios</b></a>
+                                    <a href="{{ path('admin.user') }}" class="nav-item nav-link"><b>Usuarios</b></a>
                                 </div>
                                 <div class="nav-item nav-link">
                                     <a href="{{ path('service') }}"
