--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -68,7 +68,7 @@
                               <scan  class="nav-item nav-link">Tipo: <b>{{ app.user.type }}</b></scan>
                             </div>
                             <div class="nav-item nav-link">
-                                <a  href="{{ path('show.user', { 'id': app.user.id }) }}"
+                                <a  href="{{ path('admin.user.show', { 'id': app.user.id }) }}"
                                    class="nav-item nav-link">Usuario: <b>{{ app.user.username }}</b></a>
                             </div>
 
