--- a/templates/Admin/user/index.html.twig
+++ b/templates/Admin/user/index.html.twig
@@ -7,12 +7,10 @@
     {% endblock %}
     {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
         <div class="container user-admin-index">
-            <h1>Ususarios
+            <h1>Usuarios
                 <a style="color: #1d2124;float: right" href="{{ path('newuser') }}"
-                   class="nav-item nav-link"><b><i class="bi bi-bag-plus-fill"></i></b></a>
+                   class="nav-item nav-link"><b><i class="bi bi-person-plus-fill"></i></b></a>
             </h1>
-
-
             <p id="info-admin"></p>
             <div style="width: 95%" id="admin-user">Loading...</div>
             <script src="{{ asset('bundles/datatables/js/datatables.js') }}"></script>
@@ -29,35 +27,12 @@
                             ]
                         }).then(function (dt) {
                         // dt contains the initialized instance of DataTables
-
                         dt.on('draw',
                             function () {
-                            /**
-                            $('.deleteUser').click(function (e) {
-                                var id = $('.deleteUser').attr('id');
-                                console.log(id)
-                                e.preventDefault()
-                                $.ajax({
-                                    type: 'POST',
-                                    data: {id: id},
-                                    url: Routing.generate('ajax.admin.user.delete'),
-                                    async: true,
-                                    success: function (data, status, object) {
-                                        var id = '#' + data;
-                                        $(id).remove();
-                                        $('#info-admin').html('<span style="color: green">Se ha eliminado el Servicio.</span>')
-                                    },
-                                    error: function (data, status, object) {
-                                    }
-                                });
-                            });
-**/
                         })
                     });
                 });
             </script>
-
-
         </div>
     {% endif %}
 {% endblock %}
