--- a/templates/Admin/user/show.html.twig
+++ b/templates/Admin/user/show.html.twig
@@ -5,18 +5,32 @@
         {{ parent() }}
     {% endblock %}
     <div class="container" id="front-show-user">
-        <h3>Información del usuario</h3>
+        <h3>Información del usuario </h3>
         <div class="row">
             <div class="col-3">
-                <b>Usuario: </b>{{ app.user.username }}
+                <b>Usuario: </b><span>{{ user.username }}</span>
             </div>
             <div class="col-3">
-               <b>Email: </b> {{ app.user.email }}
+                <b>Email: </b> <span>{{ user.email }}</span>
             </div>
             <div class="col-3">
-                <b>Tipo de usuario: </b> {{ app.user.type }}
+                <b>Tipo de usuario: </b> <span>{{ user.type }}</span>
+            </div>
+            <div class="col-3">
+                {% if user.type == 'operator' %}
+                    <div class="container">
+                        <a href="{{ path('admin.user') }}">
+                            <button class="btn btn-warning">Volver</button>
+                        </a>
+                        <a href="#">
+                            <button class="btn btn-dark">Asignar Tarea</button>
+                        </a>
+                    </div>
+                {% endif %}
             </div>
         </div>
+
+
     </div>
 
 {% endblock %}
