--- a/templates/Admin/user/show.html.twig
+++ b/templates/Admin/user/show.html.twig
@@ -30,7 +30,11 @@
             </div>
         </div>
 
+        <div>
+            {{ form_start(formTask,{ 'attr': {'enctype': 'multipart/form-data'} ,'name':'editUser' }) }}
+            {{ form_end(formTask) }}
+        </div>
+
 
     </div>
-
 {% endblock %}
