--- a/templates/Admin/task/index.html.twig
+++ b/templates/Admin/task/index.html.twig
@@ -12,7 +12,7 @@
                    class="nav-item nav-link"><b><i class="bi bi-file-earmark-plus-fill"></i></b></a>
             </h1>
             <p id="info-admin-task"></p>
-            <div style="width: 95%" id="admin-task">Loading...</div>
+            <div  id="admin-task" class="table-responsive table-bordered">Loading...</div>
             <script src="{{ asset('bundles/datatables/js/datatables.js') }}"></script>
             <script>
                 $(function () {
