--- a/templates/Admin/user/index.html.twig
+++ b/templates/Admin/user/index.html.twig
@@ -12,7 +12,7 @@
                    class="nav-item nav-link"><b><i class="bi bi-person-plus-fill"></i></b></a>
             </h1>
             <p id="info-admin"></p>
-            <div style="width: 95%" id="admin-user">Loading...</div>
+            <div  id="admin-user" class="table-responsive">Loading...</div>
             <script src="{{ asset('bundles/datatables/js/datatables.js') }}"></script>
             <script>
                 $(function () {
